--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,37 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 # i18n 메시지 파일 설정
 spring.messages.basename=messages
+
+# FakeDataGen 설정
+fakedatagen.batch-size=50000
+fakedatagen.max-record-count=10000000
+fakedatagen.min-record-count=1
+fakedatagen.default-record-count=100000
+fakedatagen.max-schema-text-size=10000000
+
+# Connection Pool 크기
+fakedatagen.pool-size.small=5
+fakedatagen.pool-size.medium=10
+fakedatagen.pool-size.large=15
+fakedatagen.pool-size.xlarge=20
+
+# Connection Pool 임계값
+fakedatagen.pool-threshold.threshold1=1000
+fakedatagen.pool-threshold.threshold2=100000
+fakedatagen.pool-threshold.threshold3=1000000
+
+# 컬렉션 초기 용량
+fakedatagen.initial-capacity.small=16
+fakedatagen.initial-capacity.medium=100
+fakedatagen.initial-capacity.large=1000
+
+# 재시도 설정
+fakedatagen.retry.enabled=true
+fakedatagen.retry.max-attempts=3
+fakedatagen.retry.delay=1000
+fakedatagen.retry.backoff-multiplier=2.0
+
+# 메모리 모니터링 설정
+fakedatagen.memory-monitoring.enabled=true
+fakedatagen.memory-monitoring.warning-threshold=0.8
+fakedatagen.memory-monitoring.critical-threshold=0.9
